<resources>
    <string name="app_name">零距离-服务商版</string>
    <string name="click_again_to_exit_tip">再按一次退出</string>
    <string name="bad_network">网络不给力啊!</string>
    <string name="network_timeout">网络请求超时!</string>
    <string name="network_timeout_req_again">网络请求超时!请重试</string>
    <string name="token_expire_and_reget">token已失效，正在重新获取</string>
    <string name="token_reget_success_and_do_your_stuff_again">token获取成功，请再次操作</string>
    <string name="prompt">提示</string>
    <string name="confirm">确定</string>
    <string name="query">查询</string>
    <string name="invite">邀请</string>
    <string name="cancel">取消</string>
    <string name="loading">正在加载，请您耐心等待…</string>
    <string name="not_open_yet">暂未开放!</string>
   <string name="bdmap_key_error_tips">百度地图-key错误, 请检查key设置</string>
   <string name="bdmap_network_error_tips">百度地图-网络错误, 请检查网络设置</string>
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
    <string name="lock_pattern_draw_lockpattern">绘制解锁图案</string>
    <string name="lock_pattern_forgot_pwd">忘记手势密码?</string>
    <string name="lock_pattern_setup">设置手势密码</string>
    <string name="lock_pattern_reset_lockpattern">重新设置手势</string>
    <string name="lock_pattern_draw_lockpattern_again">再次绘制解锁图案</string>
    <string name="lock_pattern_error_retry">密码错误，还可以输入%1s次</string>
    <string name="lock_pattern_error_less_then_4">至少连接4个点，请重新输入</string>
    <string name="lock_pattern_error_not_the_same">与上次绘制不一致，请重新绘制</string>
    <string name="lock_pattern_error_exceed_retry_times">您已连续5次输错手势，手势解锁已关闭，请重新登录</string>
    <string name="lock_pattern_error_reset_pattern_tips">忘记手势密码，需重新登录</string>
    <string name="lock_pattern_error_relogin">重新登录</string>
    <string name="lock_pattern_error_switch_account">登录其他账户</string>
   <string name="settings_set_pwd">修改密码</string>
   <string name="settings_set_bd_pwd">设置本地安全密码</string>
   <string name="settings_offline_map">离线地图</string>
   <string name="settings_msg_notify_set">消息提醒</string>
   <string name="settings_about">关于</string>
   <string name="settings_logout">退出登录</string>
   <string name="settings_title">设置</string>
   <string name="settings_about_company_name">寶時龍智能技术有限公司</string>
   <string name="settings_about_hlep_note">帮助说明</string>
   <string name="settings_about_with_us">关于我们</string>
   <string name="login">登录</string>
   <string name="settings_modify_pw">修改密码</string>
   <string name="settings_old_pw">输入旧密码</string>
   <string name="settings_new_pw">输入新密码</string>
    <string name="hint_login_user_account">账号</string>
    <string name="hint_login_user_pwd">密码</string>
    <string name="offline_map_city_input_hint">输入城市名称,例如:深圳市</string>
    <string name="download">下载</string>
    <string name="how_much_downloaded">已下载:--</string>
    <string name="already_download">(已下载)</string>
    <string name="downloading">正在下载: </string>
    <string name="wait_to_download">等待下载</string>
    <string name="unfinished">未完成</string>
     <string name="offline_download_city">已下载城市</string>
     <string name="offline_listof_city">城市列表</string>
     <string name="offline_download_manage">下载管理</string>
     <string name="offline_allof_city">全国城市</string>
   <string name="about_check_update">检查更新</string>
   <string name="about_no_new_ver">已是最新版</string>
   <string name="about_share_app">分享APP</string>
   <string name="about_feedback">意见反馈</string>
   <string name="about_user_agreenment">用户协议</string>
   <string name="about_add_to_ue_plan">加入用户体验计划</string>
   <string name="set_notifier_do_not_disturb">免打扰</string>
   <string name="set_notifier_do_not_disturb_period">免打扰时段</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="remember_account">记住账号</string>
     <string name="remember_password">记住密码</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="user_register">新用户注册</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="hint_already_registered">该手机号码已注册，请直接登录</string>
    <string name="hint_phone_invalid">手机号不合法</string>
    <string name="regist_num_result_success">验证码已发送到 %1$s</string>
    <string name="regist_num_result_has_regist">此号码已注册过，请直接登录</string>
    <string name="regist_password_hint">6–20位密码，支持字母和数字</string>
    <string name="regist_sms_code_hint">6位短信验证码</string>
    <string name="regist_loading">正在注册…</string>
    <string name="regist_and_login_loading">注册成功，正在登录…</string>
    <string name="login_num_hint">11位手机号</string>
    <string name="login_password_hint">填写密码</string>
    <string name="login_password_hide">隐藏</string>
    <string name="login_password_show">显示</string>
    <string name="login_sms_code_hint">6位短信验证码</string>
    <string name="login_forgot_num_result_success">验证码已发送到 %1$s</string>
    <string name="login_find_password_title">忘记密码</string>
    <string name="login_find_password">重置密码并登录</string>
    <string name="login_new_password_hint">填写新密码</string>
    <string name="login_find_info">您可以为此帐号设置新密码：</string>
    <string name="login_loading">正在登录…</string>
    <string name="uploading_headPhoto">正在上传头像…</string>
    <string name="account_check_info_tel_error_null">手机号码不能为空</string>
    <string name="account_check_info_tel_error">请填写正确的11位手机号码</string>
    <string name="account_check_info_smscode_is_error_null">验证码不能为空</string>
    <string name="account_check_info_smscode_is_error">请填写6位数字验证码</string>
    <string name="account_check_info_password_error_null">密码不能为空</string>
    <string name="account_check_info_password_error">请填写6–20位的密码，区分大小写</string>
    <string name="resend">重新获取</string>
    <string name="resend_with_time">%1$s秒</string>
    <string name="slide_menu_item_my_msg">我的消息</string>
    <string name="slide_menu_item_my_car">我的车辆</string>
    <string name="slide_menu_item_settings">"设置        "</string>
    <string name="onekey_service_call_4s">4S店总机(60123456)</string>
    <string name="onekey_service_call_help">救援(60213456)</string>
    <string name="onekey_service_call_insurance">救援(60312456)</string>
    <string name="car_name_sample">路虎揽胜</string>
    <string name="title_carcondtion_query">车况查询</string>
    <string name="title_smart_handctrl">智能掌控</string>
    <string name="title_convenient_service">便捷服务</string>
    <string name="title_4s_default">我的4s店</string>
    <string name="title_recharge_center">充值中心</string>
    <string name="title_package_select">套餐选择</string>
    <string name="title_payments_select">支付方式</string>
    <string name="title_violation_query">违章查询</string>
    <string name="title_prearrangements_records">预约记录</string>
    <string name="title_prearrangements_call_rescue">一键救援</string>
    <string name="title_loc_service">位置服务</string>
    <string name="loc_service_gps">GPS</string>
    <string name="loc_service_desc">"车位查询  轨迹查询  电子围栏        "</string>
    <string name="carservice_maintenance">保养到期</string>
    <string name="carservice_insurrance">保险到期</string>
    <string name="carservice_year_inspect">年间到期</string>
    <string name="remain">剩余</string>
    <string name="day">天</string>
    <string name="cs_cur_car">当前车辆</string>
    <string name="cs_charging_model">计费模式：%1$s</string>
    <string name="cs_charging_model_monthly">包月</string>
    <string name="cs_charging_model_yearly">包年</string>
    <string name="cs_package_remaining">套餐余额：%1$.1f 元</string>
    <string name="carcondtion_cur_status">当前状态</string>
    <string name="carcondtion_door_status">车门: %1$s</string>
    <string name="carcondtion_eng_status">引擎: %1$s</string>
    <string name="carcondtion_window_status">车窗: %1$s</string>
    <string name="carcondtion_tailbox_status">尾箱: %1$s</string>
    <string name="carcondtion_light_status">车灯: %1$s</string>
    <string name="carcondtion_battery_status">电瓶: %1$s</string>
    <string name="carcondtion_mileage_status">里程: %1$s km</string>
    <string name="full_of_power">充足</string>
    <string name="less_power">亏电</string>
    <string name="turn_on">开启</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="url_link_error">链接有误，请重新进入</string>
    <string name="dialog_call_warning_msg">是否拨打电话给%1$s？</string>
    <string name="dialog_call_btn_call">拨打</string>
    <string name="service_app_label_recharge_online">在线充值</string>
    <string name="service_app_label_around_service">周边服务</string>
    <string name="service_app_label_violation_query">违章查询</string>
    <string name="service_app_label_more">更多定制</string>
    <string name="my_4s_app_label_prearrange_repair">预约维修</string>
    <string name="my_4s_app_label_prearrange_carwash">预约洗车</string>
    <string name="my_4s_app_label_prearrange_maintenance">预约保养</string>
    <string name="my_4s_app_label_rodeside_drive">预约试驾</string>
    <string name="my_4s_app_label_rodeside_rescue">道路救援</string>
    <string name="my_4s_app_label_more">添加更多</string>
    <string name="recharge_select_targets_hint">选择充值车辆</string>
    <string name="recharge_select_package">选择充值套餐</string>
    <string name="recharge_check_order_info">确认订单信息</string>
    <string name="recharge_order_num">订单号：%1$s</string>
    <string name="recharge_order_carname">车辆：%1$s</string>
    <string name="recharge_order_package_name">套餐：%1$s</string>
    <string name="recharge_order_price">
        <![CDATA[
        <font color="#777777">价格：￥</font>
        <font color="#ff0000">%1$.1f</font>
        ]]>
    </string>
    <string name="recharge_payments_select">选择支付方式</string>
    <string name="recharge_payments_alipay">支付宝</string>
    <string name="recharge_payments_weixinpay">微信支付</string>
    <string name="valid_remaining_days">
        <![CDATA[
        <font color="#777777">有效期剩余: </font>
        <font color="#01a25f">%1$d</font>
        <font color="#777777">天</font>
        ]]>
   </string>
    <string name="package_price">
        <![CDATA[
        <font color="#777777">￥</font>
        <font color="#ff0000">%1$.1f</font>
        ]]>
   </string>
   <string name="violation_qenalty_car_license_num">车牌号码</string>
   <string name="violation_qenalty_car_license_num_hint">请输入车牌号码</string>
   <string name="violation_qenalty_car_frame_num">车架号码</string>
   <string name="violation_qenalty_car_frame_num_hint">请输入车架号后6位</string>
   <string name="violation_qenalty_car_eng_num">发动机号</string>
   <string name="violation_qenalty_car_eng_num_hint">请输入发动机号后6位</string>
   <string name="violation_qenalty_private_tips">以上车辆信息仅用于违章查询，我们将严格保密，请您放心填写</string>
      <string name="ruhu_laoren_xinxi">老人信息</string>
      <string name="ruhu_jiankang_xinxi">健康信息</string>
      <string name="ruhu_anquan_xinxi">安全信息</string>
      <string name="ruhu_qiandao">入户签到</string>
      <string name="ruhu_likai">离开签退</string>
          <string name="ruhu_tijiao_ziliao">提交资料</string>
          <string name="ruhu_xinxi_jiankang">健康状况</string>
         <string name="ruhu_jiating_qinshuru_chuli_jieguo">请输入处理信息</string>
          <string name="ruhu_jiating_tianjia_zhaopian">添加照片（最多四张）</string>
          <string name="order_form_detail_Confirm">确认完成</string>
             <string name="ping_jia_note">请对本次服务打评</string>
             <string name="ping_jia_feichang_manyi">非常满意</string>
             <string name="ping_jia_manyi">满意</string>
              <string name="ping_jia_yiban">一般</string>
              <string name="set_sim_num_title">提示</string>
             <string name="set_sim_num_note">老人的卡没有设置SIM卡号，请输入</string>
                 <string name="fws_order_dai_shouli">待受理</string>
                <string name="fws_order_dingdanhao">订单号:</string>
                <string name="fws_order_yuyue_shijian">预约时间:</string>
                  <string name="fws_order_laoren_dizhi">老人地址:</string>
                 <string name="fws_order_note">备注:</string>
</resources>