<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="match_parent"
      android:orientation="vertical"  
    android:layout_height="match_parent" >
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:orientation="vertical">    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:padding="10dp"
    android:orientation="horizontal"    >
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
	android:background="@drawable/selector_item_card_bottom_bg"
	android:id="@+id/xinxi_laoren"
	android:onClick="onClick"
	android:clickable="true"
    android:layout_weight="1.0" 
    android:gravity="center"
    android:textSize="@dimen/ruhu_xinxi_title_size"
    android:text="@string/ruhu_laoren_xinxi"   
    />    
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_weight="1.0" 
    android:gravity="center"
	android:background="@drawable/selector_item_card_bottom_bg"
	android:id="@+id/xinxi_jiankang"
	android:onClick="onClick"
	android:clickable="true"
    android:textSize="@dimen/ruhu_xinxi_title_size"
    android:text="@string/ruhu_jiankang_xinxi"   
    />  
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_weight="1.0" 
    android:gravity="center"
	android:background="@drawable/selector_item_card_bottom_bg"
	android:id="@+id/xinxi_anquan"
	android:onClick="onClick"
	android:clickable="true"
    android:textSize="@dimen/ruhu_xinxi_title_size"
    android:text="@string/ruhu_anquan_xinxi"   
    /> 
</LinearLayout>    
<View 
                android:layout_width="match_parent"
                android:layout_height="1.0dp" 
                android:background="@drawable/divider_linear_vertical_1px"
    />
</LinearLayout>    

    <android.support.v4.view.ViewPager
        android:id="@+id/ruhu_vPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_weight="1.0"        
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="50dp" 
    android:layout_gravity="bottom"
    android:orientation="horizontal">
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:layout_weight="1.0" 
    android:gravity="center"
    android:clickable="true"
    android:onClick="onClick"    
    android:background="@drawable/selector_ruhu_qiandao_bg"
    android:textSize="@dimen/ruhu_xinxi_title_size"
    android:text="@string/ruhu_qiandao" 
    android:textColor="@color/color_main_blue"
    />
<View 
                android:layout_width="2dp"
                android:layout_height="wrap_content" 
                android:background="#00000000"
    />
<TextView 
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:layout_weight="1.0" 
    android:gravity="center"
    android:clickable="true"
    android:onClick="onClick"
    android:background="@drawable/selector_ruhu_qiandao_bg"
    android:textSize="@dimen/ruhu_xinxi_title_size"
    android:text="@string/ruhu_likai" 
    android:textColor="@color/color_main_blue"
    />
</LinearLayout>

</LinearLayout>
</LinearLayout>
