<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="vertical" >
		
<FrameLayout 
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/order_create_time_bgd"
    >
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|left"
    android:orientation="vertical">  
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:background="@color/dark_color_bgd"
    android:orientation="horizontal">   
  <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="18sp"
    android:text="@string/fws_order_dingdanhao"
    android:textColor="@color/dark_color_text"
      />  
 <TextView 
    android:id="@+id/fws_list_item_order_dingdanhao"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_weight="1.0"
    android:textSize="18sp"
    android:textColor="@color/dark_color_text"
      />  
   <TextView 
    android:id="@+id/fws_list_item_order_status"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:textSize="18sp"
    android:text="@string/fws_order_dai_shouli"
    android:textColor="@color/color_main_blue"
      />       
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:layout_weight="2.3"
    android:text="@string/fws_order_yuyue_shijian" 
    android:textSize="18sp"
    android:textColor="@color/normal_color_text"     
    android:singleLine="true"
    />
<TextView
    android:id="@+id/fws_order_yuyue_shijian" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingLeft="10dp"
    android:textSize="18sp"
    android:layout_weight="1.0"
    android:textColor="@color/normal_color_text"     
    />
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:layout_weight="2.3"
    android:text="@string/fws_order_note" 
    android:textSize="18sp"
    android:textColor="@color/normal_color_text"     
    />
<TextView
    android:id="@+id/fws_list_item_order_note" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingLeft="10dp"
    android:textSize="18sp"
    android:layout_weight="1.0"
    android:textColor="@color/normal_color_text"     
    />
</LinearLayout>

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:layout_weight="2.3"
    android:text="@string/fws_order_laoren_dizhi" 
    android:textSize="18sp"
    android:textColor="@color/normal_color_text"     
    />
<TextView
    android:id="@+id/fws_list_item_order_laoren_dizhi" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:paddingLeft="10dp"
    android:textSize="18sp"
    android:layout_weight="1.0"
    android:textColor="@color/normal_color_text"     
    />
</LinearLayout>
</LinearLayout>

 <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"       
    android:layout_gravity="right|center_vertical"
    android:src="@drawable/shangpin_item_arrow"
     />
</FrameLayout>		

</LinearLayout>

