<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical" >
<TextView 
     android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:textColor="@color/normal_color_text"
    android:textSize="20sp"  
    android:text="@string/ruhu_xinxi_jiankang"
    />    
<View 
                android:layout_width="match_parent"
                android:layout_height="1.0dp" 
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/divider_linear_vertical_1px"
    />    
    
<EditText 
    android:id="@+id/ruhu_jiating_qinshuru_chuli_jieguo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_shurukuang"
    android:padding="5.0dp"
    android:singleLine="true" 
    android:hint="@string/ruhu_jiating_qinshuru_chuli_jieguo"
    /> 

<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5.0dp"
    android:singleLine="true"    
    android:text="@string/ruhu_jiating_tianjia_zhaopian"
    android:textSize="18sp"
    android:textColor="@color/normal_color_text"
    />

<LinearLayout 
    android:id="@+id/ruhu_jiating_tianjia_zhaopian_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:orientation="horizontal">
    
<ImageView 
    android:id="@+id/ruhu_jiating_tianjia_zhaopian_btn"
    android:layout_width="60dp"
    android:layout_height="60dp"  
    android:onClick="onClick"
    android:src="@drawable/ruhu_jiating_tianjia_zhaopian_btn"
    />
</LinearLayout>

<View 
                android:layout_width="match_parent"
                android:layout_height="1.0dp" 
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/divider_linear_vertical_1px"
    />        
</LinearLayout>
